// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Basic usage 1`] = `
<div>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--success"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          success alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--info"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          info alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--warning"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          warning alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--error"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          error alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`Customizable close button 1`] = `
<div>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--success"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          unclosable alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={
            Object {
              "display": "none",
            }
          }
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--info"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          customized close-text
        </span>
        <i
          className="el-alert__closebtn is-customed"
          onClick={[Function]}
          style={Object {}}
        >
          Gotcha
        </i>
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--warning"
      style={Object {}}
    >
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          alert with callback
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`With description 1`] = `
<span
  className={undefined}
  style={undefined}
>
  <div
    className="el-alert el-alert--success"
    style={Object {}}
  >
    <div
      className="el-alert__content"
    >
      <span
        className="el-alert__title is-bold"
      >
        with description
      </span>
      <p
        className="el-alert__description"
      >
        This is a description.
      </p>
      <i
        className="el-alert__closebtn el-icon-close"
        onClick={[Function]}
        style={Object {}}
      />
    </div>
  </div>
</span>
`;

exports[`With icon 1`] = `
<div>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--success"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-circle-check"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          success alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--info"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-information"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          info alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--warning"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-warning"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          warning alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--error"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-circle-cross"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title"
        >
          error alert
        </span>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
</div>
`;

exports[`With icon and description 1`] = `
<div>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--success"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-circle-check is-big"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title is-bold"
        >
          success alert
        </span>
        <p
          className="el-alert__description"
        >
          more text description
        </p>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--info"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-information is-big"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title is-bold"
        >
          info alert
        </span>
        <p
          className="el-alert__description"
        >
          more text description
        </p>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--warning"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-warning is-big"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title is-bold"
        >
          warning alert
        </span>
        <p
          className="el-alert__description"
        >
          more text description
        </p>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
  <span
    className={undefined}
    style={undefined}
  >
    <div
      className="el-alert el-alert--error"
      style={Object {}}
    >
      <i
        className="el-alert__icon el-icon-circle-cross is-big"
      />
      <div
        className="el-alert__content"
      >
        <span
          className="el-alert__title is-bold"
        >
          error alert
        </span>
        <p
          className="el-alert__description"
        >
          more text description
        </p>
        <i
          className="el-alert__closebtn el-icon-close"
          onClick={[Function]}
          style={Object {}}
        />
      </div>
    </div>
  </span>
</div>
`;
